fixed the animated text view on mobile

--- a/src/app/views/home-view/animated-welcome-paragraph/animated-welcome-paragraph.component.css
+++ b/src/app/views/home-view/animated-welcome-paragraph/animated-welcome-paragraph.component.css
@@ -8,5 +8,5 @@
     translate: -50% -50%;
     font-family: "Space Mono", monospace;
     font-weight: 700;
-    font-size: 8rem;
+    font-size: 4rem;
 }
